add functions to train full dataset

--- a/notebooks/train_model.ipynb
+++ b/notebooks/train_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"D:\\GitHub\\ML-analysis\\dataset\"\n",
-    "data_train, label_train, data_test, label_test = preprocessing(path)"
+    "train_path = \"D:\\GitHub\\FER-with-HOG-and-SVM\\datasets/train\"     #change your path here\n",
+    "data_train, label_train, data_test, label_test = preprocessing(train_path)"
    ]
   },
   {
