--- a/notebooks/train_model.ipynb
+++ b/notebooks/train_model.ipynb
@@ -42,7 +42,8 @@
    "source": [
     "# Load the dataset\n",
     "path = \"D:/GitHub/FER-with-HOG-and-SVM/datasets/train/sample_1\"     # path to dataset, change your path here\n",
-    "data_train, label_train, data_test, label_test = preprocessing_split(path)"
+    "ratio = 0.5\n",
+    "data_train, label_train, data_test, label_test = preprocessing_split(path,ratio)"
    ]
   },
   {
@@ -62,6 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train a model\n",
     "ker = 'poly'  # kernel type, change to 'linear', 'rbf', 'sigmoid' or 'poly' for different kernels\n",
     "deg = 3\n",
     "gam = 0.1\n",
@@ -87,27 +89,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.makedirs('models', exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# save the model\n",
     "now = datetime.now().strftime(\"%d%m%Y_%H%M%S\")\n",
     "joblib.dump(model, f\"../models/kernel-{ker}_deg-{deg}_gamma-{gam}_C-{c}_coef0-{coef}_{now}.pkl\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
