implement new preprocessing function

--- a/notebooks/evaluate_model.ipynb
+++ b/notebooks/evaluate_model.ipynb
@@ -45,7 +45,7 @@
     "c = 75\n",
     "coef = 1\n",
     "date = '02082025'   #ddmmyyyy: date of the model\n",
-    "time = '095138'   #hhmmss: time of the model\n",
+    "time = '104313'   #hhmmss: time of the model\n",
     "\n",
     "model = joblib.load(f'../models/kernel-{ker}_deg-{deg}_gamma-{gam}_C-{c}_coef0-{coef}_{date}_{time}.pkl')"
    ]
@@ -58,7 +58,8 @@
    "source": [
     "# Load the dataset\n",
     "path = \"D:/GitHub/FER-with-HOG-and-SVM/datasets/train/sample_1\"     # path to dataset, change your path here\n",
-    "data_train, label_train, data_test, label_test = preprocessing_split(path)\n",
+    "ratio = 0.5\n",
+    "data_train, label_train, data_test, label_test = preprocessing_split(path, ratio)\n",
     "X_train , y_train = transform_data(data_train, label_train)\n",
     "X_test , y_test = transform_data(data_test, label_test)"
    ]
@@ -142,6 +143,13 @@
     "\n",
     "#from 0 to 4: anger, happy, neutral, sad, suprise"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
